Fixed faq link; hidden by github image

--- a/src/public/stylesheets/application.css
+++ b/src/public/stylesheets/application.css
@@ -34,7 +34,7 @@ header p {
 header nav {
     position: absolute;
     bottom: 0;
-    left: 150px;
+    left: 100px;
     float: left;
 }
 
